--- a/internal/site/src/locales/cs/cs.po
+++ b/internal/site/src/locales/cs/cs.po
@@ -114,6 +114,10 @@ msgstr "Přidat URL"
 msgid "Adjust display options for charts."
 msgstr "Upravit možnosti zobrazení pro grafy."
 
+#: src/components/routes/settings/general.tsx
+msgid "Adjust the width of the main layout"
+msgstr "Upravit šířku hlavního rozvržení"
+
 #: src/components/command-palette.tsx
 #: src/components/command-palette.tsx
 msgid "Admin"
@@ -638,6 +642,10 @@ msgstr "Exportovat aktuální konfiguraci systémů."
 msgid "Fahrenheit (°F)"
 msgstr "Fahrenheita (°F)"
 
+#: src/components/systems-table/systems-table-columns.tsx
+msgid "Failed"
+msgstr "Selhalo"
+
 #: src/components/routes/system/smart-table.tsx
 msgid "Failed Attributes:"
 msgstr "Neúspěšné atributy:"
@@ -766,6 +774,10 @@ msgstr "Jazyk"
 #: src/components/systems-table/systems-table.tsx
 msgid "Layout"
 msgstr "Rozvržení"
+
+#: src/components/routes/settings/general.tsx
+msgid "Layout width"
+msgstr "Šířka rozvržení"
 
 #: src/components/systemd-table/systemd-table.tsx
 msgid "Lifecycle"
@@ -1196,6 +1208,10 @@ msgstr "Sériové číslo"
 #: src/components/systemd-table/systemd-table.tsx
 msgid "Service Details"
 msgstr "Detaily služby"
+
+#: src/components/systems-table/systems-table-columns.tsx
+msgid "Services"
+msgstr "Služby"
 
 #: src/components/routes/settings/general.tsx
 msgid "Set percentage thresholds for meter colors."
