--- a/internal/site/src/locales/hu/hu.po
+++ b/internal/site/src/locales/hu/hu.po
@@ -114,6 +114,10 @@ msgstr "URL hozzáadása"
 msgid "Adjust display options for charts."
 msgstr "Állítsa be a diagram megjelenítését."
 
+#: src/components/routes/settings/general.tsx
+msgid "Adjust the width of the main layout"
+msgstr "A fő elrendezés szélességének beállítása"
+
 #: src/components/command-palette.tsx
 #: src/components/command-palette.tsx
 msgid "Admin"
@@ -638,6 +642,10 @@ msgstr "Exportálja a jelenlegi rendszerkonfigurációt."
 msgid "Fahrenheit (°F)"
 msgstr "Fahrenheit (°F)"
 
+#: src/components/systems-table/systems-table-columns.tsx
+msgid "Failed"
+msgstr "Sikertelen"
+
 #: src/components/routes/system/smart-table.tsx
 msgid "Failed Attributes:"
 msgstr "Sikertelen attribútumok:"
@@ -766,6 +774,10 @@ msgstr "Nyelv"
 #: src/components/systems-table/systems-table.tsx
 msgid "Layout"
 msgstr "Elrendezés"
+
+#: src/components/routes/settings/general.tsx
+msgid "Layout width"
+msgstr "Elrendezés szélessége"
 
 #: src/components/systemd-table/systemd-table.tsx
 msgid "Lifecycle"
@@ -1196,6 +1208,10 @@ msgstr "Sorozatszám"
 #: src/components/systemd-table/systemd-table.tsx
 msgid "Service Details"
 msgstr "Szolgáltatás részletei"
+
+#: src/components/systems-table/systems-table-columns.tsx
+msgid "Services"
+msgstr "Szolgáltatások"
 
 #: src/components/routes/settings/general.tsx
 msgid "Set percentage thresholds for meter colors."
