--- a/internal/site/src/locales/ja/ja.po
+++ b/internal/site/src/locales/ja/ja.po
@@ -114,6 +114,10 @@ msgstr "URLを追加"
 msgid "Adjust display options for charts."
 msgstr "チャートの表示オプションを調整します。"
 
+#: src/components/routes/settings/general.tsx
+msgid "Adjust the width of the main layout"
+msgstr "メインレイアウトの幅を調整"
+
 #: src/components/command-palette.tsx
 #: src/components/command-palette.tsx
 msgid "Admin"
@@ -638,6 +642,10 @@ msgstr "現在のシステム設定をエクスポートします。"
 msgid "Fahrenheit (°F)"
 msgstr "華氏 (°F)"
 
+#: src/components/systems-table/systems-table-columns.tsx
+msgid "Failed"
+msgstr "失敗"
+
 #: src/components/routes/system/smart-table.tsx
 msgid "Failed Attributes:"
 msgstr "失敗した属性:"
@@ -766,6 +774,10 @@ msgstr "言語"
 #: src/components/systems-table/systems-table.tsx
 msgid "Layout"
 msgstr "レイアウト"
+
+#: src/components/routes/settings/general.tsx
+msgid "Layout width"
+msgstr "レイアウト幅"
 
 #: src/components/systemd-table/systemd-table.tsx
 msgid "Lifecycle"
@@ -1196,6 +1208,10 @@ msgstr "シリアル番号"
 #: src/components/systemd-table/systemd-table.tsx
 msgid "Service Details"
 msgstr "サービス詳細"
+
+#: src/components/systems-table/systems-table-columns.tsx
+msgid "Services"
+msgstr "サービス"
 
 #: src/components/routes/settings/general.tsx
 msgid "Set percentage thresholds for meter colors."
