--- a/internal/site/src/locales/vi/vi.po
+++ b/internal/site/src/locales/vi/vi.po
@@ -114,6 +114,10 @@ msgstr "Thêm URL"
 msgid "Adjust display options for charts."
 msgstr "Điều chỉnh tùy chọn hiển thị cho biểu đồ."
 
+#: src/components/routes/settings/general.tsx
+msgid "Adjust the width of the main layout"
+msgstr "Điều chỉnh chiều rộng bố cục chính"
+
 #: src/components/command-palette.tsx
 #: src/components/command-palette.tsx
 msgid "Admin"
@@ -638,6 +642,10 @@ msgstr "Xuất cấu hình hệ thống hiện tại của bạn."
 msgid "Fahrenheit (°F)"
 msgstr "Độ F (°F)"
 
+#: src/components/systems-table/systems-table-columns.tsx
+msgid "Failed"
+msgstr "Thất bại"
+
 #: src/components/routes/system/smart-table.tsx
 msgid "Failed Attributes:"
 msgstr "Thuộc tính thất bại:"
@@ -766,6 +774,10 @@ msgstr "Ngôn ngữ"
 #: src/components/systems-table/systems-table.tsx
 msgid "Layout"
 msgstr "Bố cục"
+
+#: src/components/routes/settings/general.tsx
+msgid "Layout width"
+msgstr "Chiều rộng bố cục"
 
 #: src/components/systemd-table/systemd-table.tsx
 msgid "Lifecycle"
@@ -1196,6 +1208,10 @@ msgstr "Số seri"
 #: src/components/systemd-table/systemd-table.tsx
 msgid "Service Details"
 msgstr "Chi tiết dịch vụ"
+
+#: src/components/systems-table/systems-table-columns.tsx
+msgid "Services"
+msgstr "Dịch vụ"
 
 #: src/components/routes/settings/general.tsx
 msgid "Set percentage thresholds for meter colors."
