--- a/internal/site/src/locales/es/es.po
+++ b/internal/site/src/locales/es/es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Language: es\n"
 "Project-Id-Version: beszel\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-11-04 22:13\n"
+"PO-Revision-Date: 2025-12-01 23:32\n"
 "Last-Translator: \n"
 "Language-Team: Spanish\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -256,15 +256,15 @@ msgstr "Caché / Buffers"
 
 #: src/components/systemd-table/systemd-table.tsx
 msgid "Can reload"
-msgstr "Puede recargar"
+msgstr "Puede recargarse"
 
 #: src/components/systemd-table/systemd-table.tsx
 msgid "Can start"
-msgstr "Puede iniciar"
+msgstr "Puede iniciarse"
 
 #: src/components/systemd-table/systemd-table.tsx
 msgid "Can stop"
-msgstr "Puede detener"
+msgstr "Puede detenerse"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 #: src/components/systems-table/systems-table-columns.tsx
@@ -322,7 +322,7 @@ msgstr "Verifica tu servicio de notificaciones"
 
 #: src/components/containers-table/containers-table.tsx
 msgid "Click on a container to view more information."
-msgstr "Haga clic en un contenedor para ver más información."
+msgstr "Haz clic en un contenedor para ver más información."
 
 #: src/components/routes/system/smart-table.tsx
 msgid "Click on a device to view more information."
@@ -1602,3 +1602,4 @@ msgstr "Sí"
 #: src/components/routes/settings/layout.tsx
 msgid "Your user settings have been updated."
 msgstr "Tu configuración de usuario ha sido actualizada."
+
